Revert "[Release] v3.0.3 - Java 8 호환성 개선"
This reverts commit 9c3caab1daf1d8dda070433bd65ec57ce3e801e9.